--- a/css/styles.css
+++ b/css/styles.css
@@ -7,25 +7,65 @@
     --button-color: #4D5AE5
 }
 
-/* Начало */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+
+                                /* -----------Начало--------- */
 body{
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: var(--bg-color-body)
 
 }
-              /* Точки  и Силки*/
-.list{
+
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    /* outline: 1px solid red; */
+}
+
+.list {
     list-style: none;
 }
-.link{
+
+.link {
     text-decoration: none;
 }
 
-
-             /* Шапка */
+        
+                                /*----------- Шапка ------------*/
 .header {
     background-color: var(--bg-color-body);
+}
+
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-nav{
+    display: flex;
+        align-items: center;
 }
 
 .header-logo {
@@ -37,19 +77,31 @@ font-family: "Raleway", sans-serif;
     letter-spacing: 0.03em;
     text-transform: uppercase;
         color: var(--button-color);
+
+        margin-right: 76px;
+         padding: 24px 0px;
 }
 .header-studio {
     
     color: var(--lofo-stydio);
 }
-.header-link {
-    font-weight: 500;
-    text-decoration: none;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--lofo-stydio);
+.header-list{
+    display: flex;
+    gap: 40px;
 }
+
+
+.header-link {
+ font-weight: 500;
+ text-decoration: none;
+ font-size: 16px;
+ line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--lofo-stydio);
+
+ padding: 24px 0px;
+}
+
 .header-link:hover,
 .header-link:focus{
    color:var(--lofo-web);
@@ -58,26 +110,49 @@ font-family: "Raleway", sans-serif;
     font-style: normal;
 }
 
+.contact-list {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-item{
+    padding: 24px 0px;
+}
+
 .contact-link {
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--color-body);
+padding: 24px 0px;
 }
 .contact-link:hover,
 .contact-link:focus{
 color: var(--lofo-web);}
 
-/* section1 */
+                                        /* --------section1 ---------*/
 .section-hero{
 background-color:var(--lofo-stydio);
+
+padding: 192px 0px;
 }
+
+.hero-container{
+    text-align: center;
+}
+
  .hero-title{
 font-size: 56px;
 line-height: 1.07;
 text-align: center;
 letter-spacing: 0.02em;
 color: var(--bg-color-body);
+
+margin: 0 auto;
+margin-bottom: 48px;
+max-width: 496px;
  }
 
  .button-hero{
@@ -88,14 +163,34 @@ color: var(--bg-color-body);
     letter-spacing: 0.04em;
     cursor: pointer;
     align-items: center;
+
     color: var(--bg-color-body);
     background-color: var(--button-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    padding: 16px 32px;
+
  }
 .button-hero:hover,
 .button-hero:focus{
     background-color:var(--lofo-web) ;
 }
- /* section2 */
+                                                /* ----------section2---------- */
+ .section-feature{
+    padding-top: 120px;
+    padding-bottom: 120px;
+ }
+
+ .feature-list{
+    display: flex;
+    gap: 24px;
+ }
+
+ .feature-item{
+    min-width: 264px;
+ }
+
  .feature-subtitle{
     font-size: 20px;
     line-height: 1.2;
@@ -109,7 +204,12 @@ color: var(--bg-color-body);
     letter-spacing: 0.02em;
     color:var(--color-body);
  }
- /* section3 */
+                                                /*------- section3 ----------*/
+
+ .product{
+    padding-bottom: 120px;
+ }
+
 .product-title{
     font-size: 36px;
     line-height: 1.11;
@@ -117,27 +217,57 @@ color: var(--bg-color-body);
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--lofo-stydio);
+
+    margin-bottom: 72px;
 }
 
-/* section4 */
+.prosuct-list{
+    display: flex;
+    gap: 24px;
+}
+
+
+                                        /* -----------section4 --------*/
+
  .team-section{
         background-color: var(--dop-bg-color);
+        padding-top: 120px;
+        padding-bottom: 120px;
  }
 
- .team-item{
-    background-color: var(--bg-color-body);
+ .team-title {
+
+     font-size: 36px;
+     line-height: 1.11;
+     text-align: center;
+     letter-spacing: 0.02em;
+     text-transform: capitalize;
+     color: var(--lofo-stydio);
+
+     margin-bottom: 72px;
  }
 
-.team-title{
-    
-        font-size: 36px;
-        line-height: 1.11;
-        text-align: center;
-            letter-spacing: 0.02em;
-            text-transform: capitalize;
-            color: var(--lofo-stydio);
+.team-list{
+   display: flex;
+   gap: 24px;
 }
 
+ .team-item{
+    text-align: center;
+
+    background-color: var(--bg-color-body);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        border-radius: 0px 0px 4px 4px
+ }
+
+.name-container {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+ 
 .team-subtitle{
     font-size: 20px;
     line-height: 1.2;
@@ -152,18 +282,13 @@ color: var(--bg-color-body);
         color: var(--color-body);
 }
 
-/* footer */
+                                                /* ------------footer------------ */
 
 .footer{
         background-color: var(--lofo-stydio);
-}
 
-.footer-text{
-    
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--bg-color-body);
+        padding-top: 100px;
+        padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -189,9 +314,36 @@ text-transform: uppercase;
 color: var(--dop-bg-color);
 }
 
+.footer-text {
+    width: 264px;
+
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--bg-color-body);
+
+    margin-top: 16px;
+}
 
 
-/* portfolio */
+                                        /* ------------portfolio------------ */
+                    
+ .portfolio{
+    padding-bottom: 120px;
+ }
+
+.button-list{
+display: flex;
+justify-content: center;
+gap: 24px;
+}
+
+.button-item{
+    margin-top: 96px;
+    margin-bottom: 72px;
+    /* outline:  1px solid red; */
+}
+
 .button-link{
     font-family: "Roboto", sans-serif;
     font-size: 16px;
@@ -199,13 +351,47 @@ color: var(--dop-bg-color);
     letter-spacing: 0.04em;
     cursor: pointer;
     background-color: var(--dop-bg-color);
+
     color: var(--button-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+
+    padding: 12px 24px;
 }
 
 .button-link:hover,
 .button-link:focus{
     color: var(--bg-color-body);
     background-color: var(--lofo-web);
+}
+
+.portfolio-container{
+    border: 1px solid #E7E9FC;
+
+    padding: 32px 16px;
+}
+
+.photo-list{
+    display: flex;
+    flex-wrap: wrap;
+        list-style: none;
+        margin-right: -24px;
+        margin-bottom: -48px;
+}
+
+.photo-item{
+
+        margin-bottom: 48px;
+        margin-right: 24px;
+        width: 360px;
+}
+
+.no-margin-button{
+    margin-bottom: 0;
+}
+
+.no-margin-right{
+    margin-right: 0;
 }
 
 .photo-title{
