--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body{
     padding-right: 15px;
     padding-top: 0px;
     padding-bottom: 0px;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 .list {
@@ -53,7 +53,11 @@ body{
 
         
                                 /*----------- Шапка ------------*/
-.header {
+    .border-portfolio{
+border-bottom: 1px solid #E7E9FC;
+    }
+
+ .header {
     background-color: var(--bg-color-body);
 }
 
@@ -192,10 +196,12 @@ max-width: 496px;
  }
 
  .feature-subtitle{
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--lofo-stydio);
+    margin-bottom: 8px;
  }
 
  .feature-text{
@@ -329,6 +335,7 @@ color: var(--dop-bg-color);
                                         /* ------------portfolio------------ */
                     
  .portfolio{
+    padding-top: 96px ;
     padding-bottom: 120px;
  }
 
@@ -339,7 +346,6 @@ gap: 24px;
 }
 
 .button-item{
-    margin-top: 96px;
     margin-bottom: 72px;
     /* outline:  1px solid red; */
 }
